client/app/controllers/create/create.less
.g-c-sidebar {
  padding-top: 30px;
  padding-right: 0;
  padding-left: 25px;
  h3 {
    font-weight: 300;
    margin-bottom: 70px;
  }
}

.g-c-section-content {
  margin-left: 20px;
  margin-right: 40px;
  .nav {
    display: none;
  }
}

.g-c-section-heading {
  margin: 30px 0 0 0;
  text-transform: uppercase;
  font-weight: bold;
  color: @darkgray-light;
  font-weight: 18px;
}

.g-c-section-content {
  margin-left: 20px;
}

.g-c-seciton-meta {
  margin-bottom: 30px;
  margin-top: 20px;
}

.formTitle {

}

.section-points {
  margin-top: 8px;
  display: inline-block;
  background: #f8f8f8;
  padding: 5px 10px;
  border-radius: 4px;
  font-weight: normal;
}

.main-content-wrap input.inlineInput {
  box-shadow: none;
  font-size: 17px;
  font-weight: 300;
  padding: 7px 10px;
  // border-bottom: solid 1px #ddd;
  // &:hover {
  //   border-bottom: solid 1px @darkgray-light;
  // }
  // &:focus {
  //   border-bottom: solid 1px @darkgray-light;
  // }
  // &.flag {
  //   background: transparent;
  // }
}

.g-c-section-list {
  list-style-type: none;
  margin-top: 10px;
  position: relative;
  margin-left: 0;
  padding: 0;

  z-index: 2;
  li {
    border: solid 1px #ddd;
    padding: 10px 10px;
    border-bottom: 0;
    cursor: pointer;
    &:hover {
      background: #efefea;
    }
    &:last-child {
      border-bottom: 1px solid #ddd;
    }
    &.active {
      font-weight: bold;
      color: #333;
      background-color: #fff;
      border-color: #ddd transparent #ddd #ddd;
    }

    &.g-c-section-text-input {
      padding: 0;
      &:hover {
        background: transparent;
      }
      input {
        width: 100%;
        line-height: 40px;
        font-size: 15px;
        padding: 2px 10px;
        font-weight: 200;
        border: 0;
        border-radius: 0;
        height: auto;
      }
    }
  }
}

.g-c-content {
  border-left: solid 1px #ddd;
  min-height: 900px;
  margin-left: -1px;
  z-index: 1;
  padding-top: 20px;
  padding-bottom: 100px;
}

.sortableList {
  counter-reset: fieldNumber;
  .formFieldWrap {
    position: relative;
    &:before {
      counter-increment: fieldNumber;
      content: counter(fieldNumber);
      position: absolute;
      bottom: 10px;
      right: 30px;
      display: block;
      width: 30px;
      height: 30px;
      background: #eee;
      z-index: 1;
      text-align: center;
      line-height: 28px;
      font-size: 13px;
      border-radius: 100%;
      border: solid 1px #ddd;
      color: #888;
    }
  }
}

.formSection {
  background-color: #fff;
  box-shadow: 0 0 5px #CACACA;
  border-radius: 2px;
  margin: 10px 0;
  position: relative;
  input[type="text"] {
    min-height: 30px;
  }
  .dashed {
    border: dashed 1px #DCDCDC;
  }
  .control-group {
    margin-bottom: 5px;
  }
  .control-label, label {
    font-weight: normal;
    color: #888;
    //vertical-align: middle;
    margin: 0;
  }
  .draghandle {
    background: url(data:image/png;charset=utf-8;base64,iVBORw0KGgoAAAANSUhEUgAAABIAAAAGCAYAAADOic7aAAAAH0lEQVQY02M4cODAfyhmgGKy+AzUNIgqmKoGDa4wAgBEaBrozyRdGQAAAABJRU5ErkJggg==) no-repeat 0 0;
    margin-bottom: 6px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 2px;
    height: 6px;
    width: 18px;
  }

  .formField {
    padding: 10px 30px 10px 10px;
    font-size: 14px;
    .control-label {
      max-width: 140px;
      color: @mediumgray-dark;
    }
    select {
      max-width: 200px;
    }
  }

  .controls {
    margin-left: 115px;
  }
  .formSort {
    cursor: move;
    height: 6px;
    padding: 15px 0;
    text-align: center;
    position: relative;
  }

  .addElement {
    cursor: pointer;
  }
  .actionInput {
    margin-bottom: 7px;
    .k-ico-close {
      font-size: 10px;
      color: #AAA;
      margin-left: 10px;
      padding: 7px;
      &:hover {
        cursor: pointer;
        background: #eee;
        color: $grayDark;
        padding: 6px;
        text-decoration: none;
        border: solid 1px #DCDCDC;
        border-radius: 2px;
      }
    }
  }
}

// Form create styles
.form-control {
  &.dashed {
    border: dashed 1px #ccc !important;
  }
}

.optionIndex {
  float: left;
  display: inline-block;
  height: 30px;
  line-height: 30px;
  width: 20px;
  font-size: 15px;
  color: #888;
}

.multipleOptions {
  overflow: hidden;
  display: block;
  margin-left: 10px;
  margin-bottom: 15px;

  .fakeRadioCheckbox {
    float: left;
    margin-right: 5px;
    margin-top: 7px;
    display: inline-block;
  }

  .form-control {
    width: 300px;
    float: left;
  }

  .pointsInput {
    width: 80px;
    float: left;
    margin: 0 0px 0 20px;
  }

  .multipleOptionsActions {
    float: left;
    margin-left: 20px;
    margin-top: 5px;
    a {
      display: inline-block;
      margin-right: 10px;
      border-radius: 3px;
      em {
        font-size: 10px;
      }
    }
  }
}


.formSectionPrev {
  border-left: solid 3px @brand-primary;
  position: relative;
  .formFieldActions {
    display: none;
  }
  &:hover {
    background: #f8f8f8;
    cursor: move;
    .formFieldActions {
      display: block;
    }
  }
  .formFieldPrev {
    padding: 15px 100px 10px 20px;
    border-bottom: solid 1px #eee;
    select {
      max-width: 300px;
    }
  }
  .inputLabel {
    margin: 10px;
    label {
      font-weight: normal;
      margin-bottom: 8px;
      margin-left: 5px;
      display: inline;
    }
  }
}

.formDetails {
  padding: 0;
  .formTitle {
    font-weight: 400;
    font-size: 14px;
  }
  .formDesc {
    padding: 7px;
  }
}

.addNewField {
  margin-top: 20px;
}

.formFieldActions {
  position: absolute;
  top: 10px;
  right: 20px;
  .btn {
    padding: 4px 7px;
    border-radius: 3px;
    background: #eee;
    margin-right: 4px;
    em {
      color: #888;
    }
    &:hover {
      background: #eee;
    }
  }
}

.last-save-text {
  font-size: 13px;
  text-align: right;
  font-weight: 300;
  display: block;
  margin-bottom: 5px;
  margin-top: -15px;
  strong {
    display: block;
  }
}

.from-settings {
  margin-top: 20px;
}

.field-condition-flag {
  margin-bottom: 20px;
}

.addNewSection {
  padding: 20px 0;
  background: #f8f8f8;
  margin-top: 30px;
  margin-left: -25px;
  padding-right: 10px;
  padding-left: 20px;
}

.form-header-meta {
  overflow: hidden;
  background: #f8f8f8;
  padding: 30px 15px;
  border-bottom: solid 1px #eee;
  overflow: hidden;
  margin: -20px -15px 35px;
}

a.showtip {
  position: relative;
  &:after {
    content: '';
    position: absolute;
    height: 0;
    width: 0;
    border: solid 15px transparent;
    border-bottom: solid 15px #f8f8f8;
    bottom: -20px;
    left: -5px;
  }
}

.choice-help-text {
  display: block;
  padding: 15px 24px 15px;
  overflow: hidden;
  background: #f8f8f8;
  margin-top: 10px;
  position: relative;
  textarea.form-control {
    width: 100%;
    font-weight: 300;
  }
}

